style/activity.css
.v-VerdantPanel-runCellMap {
  line-height: calc(1.5em + 4px);
  display: inline-block;
  text-align: left;
  padding-left: 2px;
  padding-right: 2px;
  flex: 1 1 69%;
  max-width: 69%;
  vertical-align: top;
}

.v-VerdantPanel-runCellMap-cell {
  display: inline-block;
  width: 1px;
  background-color: var(--jp-content-font-color3);
  margin: 2px 1px;
  height: 1em;
}

.v-VerdantPanel-runCellMap-cell.highlight {
  border-color: white;
}

.Verdant-events-column {
  display: inline-block;
}
.Verdant-events-column.label {
  width: 35%;
  min-width: 4em; /*to prevent weird date text cropping*/
}
.Verdant-events-column.map {
  width: 65%;
}

.Verdant-events-date-header {
  padding: var(--jp-cell-padding);
  border-bottom: 1px solid var(--jp-border-color3);
  text-transform: uppercase;
  font-size: var(--jp-content-font-size0);
  padding-top: 1.5em;
  position: sticky;
  top: 0px;
  background: var(--jp-layout-color0);
  z-index: 2;
  display: flex;
  justify-content: space-between;
}

.Verdant-events-date-header-label {
  margin-left: 1.5em;
  margin-top: 2px;
}

.Verdant-events-date-collapse-header {
  display: flex;
  flex-direction: row;
  text-align: center;
}

.Verdant-events-date-collapse-header-count {

}

.Verdant-events-date-collapse-header-count.hidden {
  display: none;
}

.Verdant-events-date-collapse-header-arrow {
  display: inline-block;
  vertical-align: center;
  background-image: var(--verdant-icon-datearrow-open);
  width: 1.3em;
  height: 1.3em;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 1.3em;
  padding: 5px;
}

.Verdant-events-date-collapse-header-arrow.closed {
  background-image: var(--verdant-icon-datearrow-closed);
  width: .75em;
  height: .75em;
  background-size: 1em;
}

.Verdant-events-date-container.hidden {
  display: none;
}

.Verdant-events-row {
  padding: var(--jp-cell-padding);
  display: flex;
  flex-direction: row;
  padding-right: 0px;
}
.Verdant-events-row:hover {
  background: var(--jp-rendermime-table-row-hover-background);
}
.Verdant-events-notebook {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  flex: 1 1 auto;
  vertical-align: baseline;
  padding-left: var(--jp-cell-padding);
  padding-right: var(--jp-cell-padding);
}
.Verdant-events-label {
  display: inline-block;
  flex: 1 1 auto;
  color: var(--jp-content-font-color2);
  padding: var(--jp-cell-padding);
  padding-left: 0px;
}

.Verdant-events-map {
  padding-top: 0.25em;
  flex: 5 0 50%;
  text-align: right;
  white-space: nowrap;
  margin-right: 4px;
  overflow: hidden;
  max-width: 100%;
  display: flex;
}

.v-VerdantPanel-runCellMap-cell.target {
  width: 2px;
  margin-left: 0px;
  height: 1em;
  border-top: 2px solid var(--jp-content-font-color3);
  border-bottom: 2px solid var(--jp-content-font-color3);
  border-radius: 5px;
  margin-top: -1px;
}

.v-VerdantPanel-runCellMap-cell-same {
  background-color: #d0c8d2;
}

.v-VerdantPanel-runCellMap-cell-changed {
  background-color: var(--verdant-cell-change-color2);
  border-color: var(--verdant-cell-change-color2);
}

.v-VerdantPanel-runCellMap-cell-removed {
  background-color: var(--verdant-cell-remove-color1);
  border-color: var(--verdant-cell-remove-color2);
}

.v-VerdantPanel-runCellMap-cell-same {
  background-color: #d0c8d2;
}

.v-VerdantPanel-runCellMap-cell-added {
  background-color: var(--verdant-cell-add-color1);
  border-color: var(--verdant-cell-add-color2);
}

